# Phoenix

./: .gitignore  1  CMakeLists.txt  Phoenix  README.md  main.cpp  path.txt  structure.txt
config/: server.wpc  server.wpp
core/: app.cpp  app.hpp  engine.cpp  engine.hpp  shared.cpp  shared.hpp  starter.cpp  starter.hpp
pages/: about.cpp  handler.cpp  handler.hpp  home.cpp  pyro.hpp  server.hpp
public/: index.html  layout.html  syntax.list
public/views/: about.html
routes/: CMakeLists.txt  register.cpp  register.hpp  routes.cpp
scripts/: build.cmd
